k3s/docker-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: container-registry
  namespace: container-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: container-registry
  template:
    metadata:
      labels:
        app: container-registry
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: arm64
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: registry-data
              mountPath: /var/lib/registry
      volumes:
        - name: registry-data
          persistentVolumeClaim:
            claimName: container-registry-pvc
