k3s/docker-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: container-registry-service
  namespace: container-registry
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '5000'
spec:
  selector: 
    app: container-registry
  type: NodePort  
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
