k3s/docker-registry/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: container-registry
  namespace: container-registry
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`hub.home.net`)
    kind: Rule
    services:
    - name: container-registry-service
      port: 5000
  tls:
    secretName: home-net-tls
